SONARTEXT-95 Improve the way how regex issues are detected in "SecretsRegexTest" (#194)